Fixed horizontal scroll bug for mobile devices

--- a/mobile.css
+++ b/mobile.css
@@ -155,7 +155,7 @@ a{
 /* name starts */
 #root #name{
     position: absolute;
-    top: 200px;
+    top: 150px;
     right: 20%
 }
 /* name ends */
@@ -170,7 +170,7 @@ a{
 #image img{
     height: 100%;
     position: absolute;
-    right: 0;
+    align-items: end;
     bottom: 0;
     transform: translate(-50%);
     transition: bottom 1s, left 1s;
